# mcme

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/zlib-1.2.8/: CTestTestfile.cmake  zlib.pc
src/: endian.h  err.h  map.c  map.h  nbt.c  nbt.h  slist.c  slist.h  test.c
